@@ -3,11 +3,13 @@ package com.hcmute.fit.toeicrise.services.impl;
 import com.hcmute.fit.toeicrise.dtos.requests.QuestionExcelRequest;
 import com.hcmute.fit.toeicrise.dtos.requests.TestRequest;
 import com.hcmute.fit.toeicrise.dtos.responses.*;
+import com.hcmute.fit.toeicrise.dtos.responses.learner.LearnerTestDetailResponse;
 import com.hcmute.fit.toeicrise.exceptions.AppException;
 import com.hcmute.fit.toeicrise.models.entities.*;
 import com.hcmute.fit.toeicrise.dtos.requests.TestUpdateRequest;
 import com.hcmute.fit.toeicrise.models.enums.*;
 import com.hcmute.fit.toeicrise.models.mappers.PageResponseMapper;
+import com.hcmute.fit.toeicrise.models.mappers.PartMapper;
 import com.hcmute.fit.toeicrise.models.mappers.TestMapper;
 import com.hcmute.fit.toeicrise.repositories.TestRepository;
 import com.hcmute.fit.toeicrise.repositories.TestSetRepository;
@@ -45,7 +47,7 @@ public class TestServiceImpl implements ITestService {
     private final IQuestionService questionService;
     private final IQuestionGroupService questionGroupService;
     private final ITagService tagService;
-
+    private final PartMapper partMapper;
     private final TestMapper testMapper;
     private final PageResponseMapper pageResponseMapper;
 
@@ -146,6 +148,7 @@ public class TestServiceImpl implements ITestService {
         test.setName(testName);
         test.setStatus(ETestStatus.PENDING);
         test.setTestSet(testSet);
+        test.setNumberOfLearnerTests(0L);
         return testRepository.save(test);
     }
 
@@ -179,7 +182,7 @@ public class TestServiceImpl implements ITestService {
         for (QuestionExcelRequest question : sortedQuestions) {
             Integer groupKey = Optional.ofNullable(extractGroupNumber(question.getQuestionGroupId()))
                     .orElse(-question.getNumberOfQuestions());
-            groupedQuestions.computeIfAbsent(groupKey, k -> new ArrayList<>()).add(question);
+            groupedQuestions.computeIfAbsent(groupKey, _ -> new ArrayList<>()).add(question);
         }
         for (Map.Entry<Integer, List<QuestionExcelRequest>> entry : new ArrayList<>(groupedQuestions.entrySet())) {
             processQuestionGroup(test, entry.getValue());
@@ -189,11 +192,10 @@ public class TestServiceImpl implements ITestService {
     @Override
     public void processQuestionGroup(Test test, List<QuestionExcelRequest> groupQuestions) {
         try {
-            QuestionExcelRequest firstQuestion = groupQuestions.get(0);
+            QuestionExcelRequest firstQuestion = groupQuestions.getFirst();
             Part part = partService.getPartById(firstQuestion.getPartNumber());
             QuestionGroup questionGroup = questionGroupService.createQuestionGroup(test, part, firstQuestion);
-            for (int i = 0; i < groupQuestions.size(); i++) {
-                QuestionExcelRequest dto = groupQuestions.get(i);
+            for (QuestionExcelRequest dto : groupQuestions) {
                 List<Tag> tags = tagService.getTagsFromString(dto.getTags());
                 questionService.createQuestion(dto, questionGroup, tags);
             }
@@ -228,5 +230,10 @@ public class TestServiceImpl implements ITestService {
 
         Page<LearnerTestResponse> testResponses = testRepository.findAll(testSpecification, pageable).map(testMapper::toLearnerTestResponse);
         return pageResponseMapper.toPageResponse(testResponses);
+    }
+
+    @Override
+    public LearnerTestDetailResponse getLearnerTestDetailById(Long id) {
+        return testMapper.toLearnerTestDetailResponse(testRepository.findListTagByIdOrderByPartName(id), partMapper);
     }
 }
